Issue #12397: Fix warnings in server package